test/semantics/programs/valid/all-local-vars-called.guav
# A fairly useless example, all declared variables are used

x = 2
y = 5
z = 1
CONST_VAR = 10

print(x + y + z)
print(CONST_VAR)

f(n, m) {
    ret n + m
}

f(x, z)
